--- a/Project2/PizzaWeb/Views/Home/TopChoice.cshtml
+++ b/Project2/PizzaWeb/Views/Home/TopChoice.cshtml
@@ -109,7 +109,7 @@
                         <span asp-validation-for="Size" class="text-danger"></span>
                     </div>
 
-                    <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                    <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
 
@@ -159,7 +159,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -185,7 +185,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -210,7 +210,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
 
@@ -240,7 +240,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -265,7 +265,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -291,7 +291,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -317,7 +317,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
             
@@ -343,7 +343,7 @@
                             <span asp-validation-for="Size" class="text-danger"></span>
                         </div>
 
-                        <a href="http://localhost:63461/Payments" class="btn btn-primary">Add To Cart</a>
+                        <a href="http://localhost:63461/Orders" class="btn btn-primary">Add To Cart</a>
                     </div>
                 </div>
         </div>
