--- a/Project2/PizzaWeb/Views/Customers/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Customers/Create.cshtml
@@ -53,7 +53,7 @@
                     <input type="submit" value="Create" class="btn" />
                 </div>
             </form>
-            <button class="btn" id="create">Create</button>
+            @*<button class="btn" id="create">Create</button>*@
             <a asp-action="Index">Back to List</a>
         </div>
 
