--- a/Project2/PizzaWeb/Views/Home/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Home/Index.cshtml
@@ -10,21 +10,24 @@
         }
 
         #btn1{
-            position: absolute;
+            /*position: absolute;
             top: 40%;
             right: 25%;
-            color: black;
+            color: black;*/
+            display: inline-block;
+            margin-right: 300px;
         }
         #btn2{
-            position: absolute;
+            /*position: absolute;
             top: 60%;
             right: 25%;
-            color: black;
+            color: black;*/
+            display: inline-block;
         }
         #item{
               font-size: 20px;
               border: none;
-              padding: 30px;
+              padding: 25px;
               width: 240px;
               text-transform: uppercase;
               border-radius: 20px;
@@ -40,15 +43,23 @@
               text-decoration: none;
         }
         img{
-            width: 85px;
-            height: 85px;
+            width: 75px;
+            height: 75px;
         }
-
+        .btn-div{
+            position: absolute;
+            top: 50%;
+            left: 20%;
+            width: 1000px;
+            height: 100px;
+        }
     </style>
+    <link rel="stylesheet" href="~/css/IndexPage.css" />
 </head>
 
 <body>
-
+    <button class="banner">Grand Opening</button>
+    <div class="btn-div">
     <div id="btn1">
         <img src="~/images/819861.png" alt="image" />
 
@@ -57,8 +68,8 @@
     </div>
     <div id="btn2">
         <img src="~/images/819861.png" alt="image" />
-        <a id="item" href="http://localhost:63461/Pizzas">CUSTOM PIZZA</a>
+        <a id="item" asp-controller="Pizzas" asp-action="create">CUSTOM PIZZA</a>
     </div>
-
+    </div>
 
 </body>
