--- a/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Pizzas/Create.cshtml
@@ -130,7 +130,7 @@
                     <option value="@Topping.RedPepper"> Red Pepper</option>
                     <option value="@Topping.Artichokes"> Artichokes</option>
                     <option value="@Topping.Basil"> Basil</option>
-                    <option value="@Topping.Null"> N/A</option>
+                    <option value="@Topping.None"> N/A</option>
 
                 </select>
 
@@ -156,7 +156,7 @@
                     <option value="@Topping.RedPepper"> Red Pepper</option>
                     <option value="@Topping.Artichokes"> Artichokes</option>
                     <option value="@Topping.Basil"> Basil</option>
-                    <option value="@Topping.Null"> N/A</option>
+                    <option value="@Topping.None"> N/A</option>
 
                 </select>
 
@@ -181,7 +181,7 @@
                     <option value="@Topping.RedPepper"> Red Pepper</option>
                     <option value="@Topping.Artichokes"> Artichokes</option>
                     <option value="@Topping.Basil"> Basil</option>
-                    <option value="@Topping.Null"> N/A</option>
+                    <option value="@Topping.None"> N/A</option>
 
                 </select>
 
