--- a/Project2/PizzaWeb/Views/Home/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-    <button class="banner">Grand Opening</button>
+    @*<button class="banner">Grand Opening</button>*@
     <div class="btn-div">
     <div id="btn1">
         <img src="~/images/819861.png" alt="image" />
