--- a/Project2/PizzaWeb/Views/Orders/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Create.cshtml
@@ -23,7 +23,7 @@
 
 <body>
     <div class="box">
-        <h2>Create Order</h2>
+        <h2>Confirm to submit your order</h2>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -33,7 +33,7 @@
                 <span asp-validation-for="TotalPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn" />
+                <input type="submit" value="Confirm" class="btn" />
             </div>
         </form>
         <a asp-action="Index">Back to List</a>
