--- a/Project2/PizzaWeb/Views/Payments/Confirmation.cshtml
+++ b/Project2/PizzaWeb/Views/Payments/Confirmation.cshtml
@@ -5,16 +5,54 @@
 @{
     ViewData["Title"] = "Confirmation";
 }
-<center><h2>Confirmation</h2></center>
 
-<div>
 
-    <hr />
-    <h3>Thank you!  @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname  @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname.</h3>
-    <p>Your Order number is: @Model.OrderId. It will be ready on @Model.Duetime!</p>
-    <p>The confirmation already sent it to your email: @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Email</p>
-</div>
-<div>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Quicksand', sans-serif;
+            text-align: center;
+        }
+        .btn {
+            border: none;
+            margin: 10px;
+            padding: 7px;
+            width: 93%;
+            text-transform: uppercase;
+            border-radius: 10px;
+            cursor: pointer;
+            color: #ffffff;
+            opacity: 0.8;
+            background-size: 200%;
+            transition: 0.6s;
+            background-image: linear-gradient(to left, #ffc312, #ee5a24, #ffc312);
+        }
 
-    <a asp-controller="Home" asp-action="Index">Back to home page!</a>
-</div>
+            .btn:hover {
+                background-position: right;
+                text-decoration: none;
+                color: black;
+            }
+    </style>
+</head>
+
+
+
+<body>
+    <h2>Order Confirmation</h2>
+
+    <div>
+
+        <hr />
+        <h3>Thank you!  @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Firstname  @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Lastname.</h3>
+        <p>Your Order number is: @Model.OrderId. It will be ready on @Model.Duetime!</p>
+        <p>The confirmation already sent it to your email: @UserManager.Users.FirstOrDefault(m => m.UserName == @UserManager.GetUserName(User)).Email</p>
+    </div>
+    <br />
+    <div>
+
+        <a asp-controller="Home" asp-action="Index" class="btn">Back to home page!</a>
+    </div>
+
+</body>
