--- a/Project2/PizzaWeb/Views/Orders/Create.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Create.cshtml
@@ -27,9 +27,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="textbox">              
-                <input asp-for="TotalPrice" class="form-control" placeholder="Total Price" />
-
+            <div class="textbox">
+                
+                <input  asp-for="TotalPrice" class="form-control" placeholder="Total Price" disabled/>
                 <span asp-validation-for="TotalPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
