--- a/Project2/PizzaWeb/Views/Orders/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Index.cshtml
@@ -27,8 +27,6 @@
 
         <h1>Order</h1>
         <br />
-        <a class="btn" asp-action="Create">Create New</a>
-        @ViewBag.CustomerID
         <table class="table">
             <thead>
                 <tr>
@@ -79,8 +77,8 @@
                         <td>
                             <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
                             <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a> |
-                            <a asp-controller="Payments" asp-action="Create" asp-route-id="@item.OrderId">Checkout</a>
+                            <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a> 
+                           
                         </td>
                     </tr>
 
