--- a/Project2/PizzaWeb/Views/Pizzas/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Pizzas/Index.cshtml
@@ -74,7 +74,7 @@
                 @Html.DisplayFor(modelItem => item.Topping3)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PizzaId">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.PizzaId">Update</a> |
                 <a asp-action="Details" asp-route-id="@item.PizzaId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PizzaId">Delete</a>
             </td>
