--- a/Project2/PizzaWeb/Views/Orders/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Orders/Index.cshtml
@@ -25,7 +25,7 @@
 
     <body>
 
-        <h1>Order</h1>
+        <h1>Order history</h1>
         <br />
         <table class="table">
             <thead>
