--- a/Project2/PizzaWeb/Views/Payments/Index.cshtml
+++ b/Project2/PizzaWeb/Views/Payments/Index.cshtml
@@ -68,7 +68,7 @@
                                 @Html.DisplayFor(modelItem => item.Customer.CustomerId)
                             </td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.PaymentId">Edit</a> |
+                                <a asp-action="Edit" asp-route-id="@item.PaymentId">Update</a> |
                                 <a asp-action="Details" asp-route-id="@item.PaymentId">Details</a> |
                                 <a asp-action="Delete" asp-route-id="@item.PaymentId">Delete</a>
                             </td>
